--- a/jkr-jewellers-frontend/src/pages/ProductDetails.css
+++ b/jkr-jewellers-frontend/src/pages/ProductDetails.css
@@ -247,7 +247,7 @@
 
     .main-image {
         max-width: 100%;
-        height: 200px;
+        height: 260px;
     }
 
     .thumbnail {
